--- a/index.html
+++ b/index.html
@@ -5,6 +5,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="fonts/fonts.css" />
+    <link rel="stylesheet" href="styles/global.css" />
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header content_section">
+      <nav class="header__menu nav_menu">
+        <ul class="header_links-list">
+          <li class="header_links-list-item header_links-list-item_no-bullit">
+            <a class="header_link">главная</a>
+          </li>
+          <li class="header_links-list-item">
+            <a class="header_link header_link_underline" href="#">посмотреть лоты</a>
+          </li>
+          <li class="header_links-list-item header_link_underline">
+            <a class="header_link" href="#">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <img
+        class="header_logo-image"
+        src="images/logo-black.svg"
+        alt="Логотип Оно тебе надо"
+      />
+      <div class="address header_address">
+        <a href="tel:+99995555555">+9 999 555 5555</a><br /><a
+          href="mailto:info@sobaka.ge"
+          >info@sobaka.ge</a
+        ><br>
+        <address>наб. Принсенграхт 263-265, Амстердам</address>
+      </div>
+    </header>
+    <main>
+      <section class="content_section cover">
+        <div class="overlay"></div>
+        <h1 class="cover_title">
+          <span class="aligner-text">Оно</span>
+          <span class="aligner-text aligner-text_center">тебе</span>
+          <span class="aligner-text aligner-text_right">надо</span>
+        </h1>
+        <section class="cover_description">
+          <h2 class="cover_description-text">
+            Аукцион вещей, в которые никто не верил
+          </h2>
+          <a class="bet-button">Сделать ставку</a>
+        </section>
+      </section>
+    </main>
+  </body>
 </html>
