--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <header class="header content_section">
+    <header class="header">
       <nav class="header__menu nav_menu">
         <ul class="header_links-list">
-          <li class="header_links-list-item header_links-list-item_no-bullit">
-            <a class="header_link">главная</a>
+          <li class="links-list-item_no-bullit">
+            <a>главная</a>
           </li>
-          <li class="header_links-list-item">
-            <a class="header_link header_link_underline" href="#">посмотреть лоты</a>
+          <li>
+            <a class="link_underline" href="#">посмотреть лоты</a>
           </li>
-          <li class="header_links-list-item header_link_underline">
-            <a class="header_link" href="#">об аукционе</a>
+          <li>
+            <a class="link_underline" href="#">об аукционе</a>
           </li>
         </ul>
       </nav>
@@ -33,25 +33,160 @@
         <a href="tel:+99995555555">+9 999 555 5555</a><br /><a
           href="mailto:info@sobaka.ge"
           >info@sobaka.ge</a
-        ><br>
+        ><br />
         <address>наб. Принсенграхт 263-265, Амстердам</address>
       </div>
     </header>
     <main>
-      <section class="content_section cover">
-        <div class="overlay"></div>
+      <section class="cover overlay">
         <h1 class="cover_title">
-          <span class="aligner-text">Оно</span>
-          <span class="aligner-text aligner-text_center">тебе</span>
-          <span class="aligner-text aligner-text_right">надо</span>
+          <span class="aligner-text"
+            >О<span class="letter_spacing-60px">но</span></span
+          >
+          <span class="aligner-text aligner-text_center"
+            >те<span class="letter_spacing-60px">бе</span></span
+          >
+          <span class="aligner-text aligner-text_right"
+            ><span class="letter_spacing-60px">н</span>адо</span
+          >
         </h1>
         <section class="cover_description">
           <h2 class="cover_description-text">
-            Аукцион вещей, в которые никто не верил
+            <span class="right_5px">Аукцион вещей, в которые никто не</span>
+            верил
           </h2>
-          <a class="bet-button">Сделать ставку</a>
+          <a class="bet-button" href="#">Сделать ставку</a>
         </section>
       </section>
+      <section class="lots">
+        <h2 class="lots_heading">Лоты</h2>
+        <ul class="lots_card-list">
+          <li class="lots_card-list-item">
+            <a class="card-link card_type_film" href="#">
+              <article class="card overlay">
+                <h3 class="card_title">
+                  Фильм режиссёра, который бросил киношколу
+                </h3>
+                <p class="card_text">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
+                </p>
+              </article></a
+            >
+          </li>
+          <li class="lots_card-list-item">
+            <a class="card-link card_type_book" href="#">
+              <article class="card overlay">
+                <h3 class="card_title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h3>
+                <p class="card_text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
+              </article></a
+            >
+          </li>
+          <li class="lots_card-list-item lots_card-list-item1">
+            <a class="card-link card_type_picture" href="#">
+              <article class="card overlay">
+                <h3 class="card_title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h3>
+                <p class="card_text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков… Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
+                </p>
+              </article></a
+            >
+          </li>
+        </ul>
+        <a class="lots_look-more-link link_underline" href="#"
+          >посмотреть больше</a
+        >
+      </section>
+      <section class="about">
+        <div class="about_logo">
+          <img
+            class="about_logo-image"
+            src="images/logo-white.svg"
+            alt="Логотип Оно тебе надо"
+          />
+        </div>
+        <article>
+          <h2 class="about_title">Об аукционе</h2>
+          <p class="about-text about-text-margin">
+            Здесь вы не встретите очередное пафосное собрание невероятно
+            дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
+            один аукцион. Потому что кому нужен дневник девочки-подростка или
+            картина, которую может нарисовать даже ребёнок? Кому нужны все эти
+            странные вещи, созданные любителями?
+          </p>
+          <p class="about-text">
+            Слишком сложные или, наоборот, слишком простые. Опережающие своё
+            время. В пух и прах растерзанные критиками. Непринятые и непонятые.
+            Когда-то они казались просто неудачными. Но, несмотря на критику,
+            кажущуюся простоту или сложность, сейчас без этих лотов невозможно
+            представить современную культуру. Когда в эти вещи не верил никто,
+            продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+          </p>
+        </article>
+      </section>
+      <footer class="footer">
+        <div class="address">
+          <a href="tel:+99995555555">+9 999 555 5555</a><br /><a
+            href="mailto:info@sobaka.ge"
+            >info@sobaka.ge</a
+          ><br />
+          <address>наб. Принсенграхт 263-265, Амстердам</address>
+        </div>
+        <nav class="nav_menu">
+          <ul class="footer_menu-list">
+            <li>
+              <a>главная</a>
+            </li>
+            <li>
+              <a class="link_underline" href="#">посмотреть лоты</a>
+            </li>
+            <li>
+              <a class="link_underline" href="#">об аукционе</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="footer_social-list">
+          <li>
+            <a href="#">
+              <img
+                class="footer__social-icon"
+                src="/images/yt.svg"
+                alt="Иконка YouTube"
+            /></a>
+          </li>
+          <li>
+            <a href="#">
+              <img
+                class="footer__social-icon"
+                src="/images/vk.svg"
+                alt="Иконка ВК"
+            /></a>
+          </li>
+          <li>
+            <a href="#">
+              <img
+                class="footer__social-icon"
+                src="/images/pinterest.svg"
+                alt="Иконка pinterest"
+            /></a>
+          </li>
+        </ul>
+      </footer>
     </main>
   </body>
 </html>
