Исправлено после ревью

--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
           </li>
         </ul>
       </nav>
-      <a class="header_logo" href="#"><img
-        class="header_logo-image"
-        src="./images/logo-black.svg"
-        alt="Логотип Оно тебе надо"
+      <a class="header_logo" href="#"
+        ><img
+          class="header_logo-image"
+          src="./images/logo-black.svg"
+          alt="Логотип Оно тебе надо"
       /></a>
       <address class="address header_address">
         <a href="tel:+99995555555">+9 999 555 5555</a><br /><a
@@ -47,21 +48,25 @@
             >те<span class="aliner-text-spacing">бе</span></span
           >
           <span class="aligner-text aligner-text_right"
-            ><span class="aliner-text-spacing">н</span>ад<span class="no_letter-spacing">о</span></span
+            ><span class="aliner-text-spacing">н</span>ад<span
+              class="no_letter-spacing"
+              >о</span
+            ></span
           >
         </h1>
         <div class="cover_description">
           <p class="cover_description-text">
-            Аукцион вещей, в которые никто <span class="cover_description-text-spacing">не верил</span>
+            Аукцион вещей, в которые никто
+            <span class="cover_description-text-spacing">не верил</span>
           </p>
-          <button class="bet-button" href="#">Сделать ставку</button>
+          <button class="bet-button">Сделать ставку</button>
         </div>
       </section>
       <section class="lots">
         <h2 class="lots_heading">Лоты</h2>
         <ul class="lots_card-list">
           <li class="lots_card-list-item">
-            <a class="card-link " href="#">
+            <a class="card-link" href="#">
               <article class="card overlay card_type_film">
                 <h3 class="card_title">
                   Фильм режиссёра, который бросил киношколу
@@ -75,7 +80,7 @@
             >
           </li>
           <li class="lots_card-list-item">
-            <a class="card-link " href="#">
+            <a class="card-link" href="#">
               <article class="card overlay card_type_book">
                 <h3 class="card_title">
                   Книга, где описан один скучный день из жизни рекламного агента
@@ -92,7 +97,7 @@
             >
           </li>
           <li class="lots_card-list-item lots_card-list-item1">
-            <a class="card-link " href="#">
+            <a class="card-link" href="#">
               <article class="card overlay card_type_picture">
                 <h3 class="card_title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
@@ -107,9 +112,7 @@
             >
           </li>
         </ul>
-        <a class="lots_look-more-link link_non-active" href="#"
-          >посмотреть больше</a
-        >
+        <a class="lots_look-more-link" href="#">посмотреть больше</a>
       </section>
       <section class="about">
         <div class="about_logo">
@@ -139,53 +142,53 @@
         </article>
       </section>
     </main>
-      <footer class="footer">
-        <address class="address">
-          <a href="tel:+99995555555">+9 999 555 5555</a><br /><a
-            href="mailto:info@sobaka.ge"
-            >info@sobaka.ge</a
-          ><br />
-          <p>наб. Принсенграхт 263-265, Амстердам</p>
-        </address>
-        <nav class="navigation_menu">
-          <ul class="footer_menu-list">
-            <li>
-              <a href="#">главная</a>
-            </li>
-            <li>
-              <a class="link_non-active" href="#">посмотреть лоты</a>
-            </li>
-            <li>
-              <a class="link_non-active" href="#">об аукционе</a>
-            </li>
-          </ul>
-        </nav>
-        <ul class="footer_social-list">
+    <footer class="footer">
+      <address class="address">
+        <a href="tel:+99995555555">+9 999 555 5555</a><br /><a
+          href="mailto:info@sobaka.ge"
+          >info@sobaka.ge</a
+        ><br />
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
+      </address>
+      <nav class="navigation_menu">
+        <ul class="footer_menu-list">
           <li>
-            <a href="#">
-              <img
-                class="footer__social-icon"
-                src="./images/vk.svg"
-                alt="Иконка YouTube"
-            /></a>
+            <a href="#">главная</a>
           </li>
           <li>
-            <a href="#">
-              <img
-                class="footer__social-icon"
-                src="./images/vk.svg"
-                alt="Иконка ВК"
-            /></a>
+            <a class="link_non-active" href="#">посмотреть лоты</a>
           </li>
           <li>
-            <a href="#">
-              <img
-                class="footer__social-icon"
-                src="./images/pinterest.svg"
-                alt="Иконка pinterest"
-            /></a>
+            <a class="link_non-active" href="#">об аукционе</a>
           </li>
         </ul>
-      </footer>
+      </nav>
+      <ul class="footer_social-list">
+        <li>
+          <a href="#">
+            <img
+              class="footer__social-icon"
+              src="./images/vk.svg"
+              alt="Иконка YouTube"
+          /></a>
+        </li>
+        <li>
+          <a href="#">
+            <img
+              class="footer__social-icon"
+              src="./images/vk.svg"
+              alt="Иконка ВК"
+          /></a>
+        </li>
+        <li>
+          <a href="#">
+            <img
+              class="footer__social-icon"
+              src="./images/pinterest.svg"
+              alt="Иконка pinterest"
+          /></a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
